--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.29.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
